Finished implimenting bootstrap library to style table/added filler text to table

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <header><h1>Student Grade Table</h1></header>
+    <table class="table table-bordered table-striped table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Student Name</th>
+          <th scope="col"> Course</th>
+          <th scope="col"> Grade</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="col">Tim Berners-Lee</th>
+          <th scope="col">Web Development</th>
+          <th scope="col">100</th>
+        </tr>
+        <tr>
+          <th scope="col">Scott Bowler</th>
+          <th scope="col">Web Development</th>
+          <th scope="col">100</th>
+        </tr>
+        <tr>
+          <th scope="col">Tim Davis</th>
+          <th scope="col">Web Development</th>
+          <th scope="col">50</th>
+        </tr>
+      </tbody>
+    </table>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
