Created and attached new relative/direct paths for js files to appropriate script tags

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         </tr>
       </tbody>
     </table>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+    <script src="assets/components/app.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
