--- a/index.html
+++ b/index.html
@@ -19,25 +19,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="col">Tim Berners-Lee</th>
-          <th scope="col">Web Development</th>
-          <th scope="col">100</th>
-        </tr>
-        <tr>
-          <th scope="col">Scott Bowler</th>
-          <th scope="col">Web Development</th>
-          <th scope="col">100</th>
-        </tr>
-        <tr>
-          <th scope="col">Tim Davis</th>
-          <th scope="col">Web Development</th>
-          <th scope="col">50</th>
-        </tr>
+
       </tbody>
     </table>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/app.js"></script>
+    <script src="assets/components/grade-table.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
