Added lines for instantiating a new gradeTable and app in the main.js file/tested to confirm GET request is still working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header><h1>Student Grade Table</h1></header>
-    <table class="table table-bordered table-striped table-hover">
+    <table id= 'table' class="table table-bordered table-striped table-hover">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Student Name</th>
