--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header><h1>Student Grade Table</h1></header>
-    <table id= 'table' class="table table-bordered table-striped table-hover">
+    <table class="table table-bordered table-striped table-hover">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Student Name</th>
@@ -18,7 +18,7 @@
           <th scope="col"> Grade</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id = 'table'>
 
       </tbody>
     </table>
