Added the necessary html tags and classes to style the new averageGradeElement so it matches the wireframe

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <body>
-    <header><h1>Student Grade Table</h1></header>
+  <body class="container">
+    <header class="row py-3">
+      <h1 class="col-8">Student Grade Table</h1>
+      <h2 class="col-4 text-right">Average Grade<span class="px-2"></span><span class="badge badge-secondary px-4">84</span></h2>
+    </header>
     <table class="table table-bordered table-striped table-hover">
       <thead class="thead-dark">
         <tr>
