--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </tbody>
     </table>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+    <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
     <script src="assets/components/grade-table.js"></script>
     <script src="assets/js/main.js"></script>
