--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="container">
     <header class="row py-3">
       <h1 class="col-8">Student Grade Table</h1>
-      <h2 class="col-4 text-right">Average Grade<span class="px-2"></span><span class="badge badge-secondary px-4">84</span></h2>
+      <h2 class="col-4 text-right">Average Grade<span class="px-2"></span><span id="badge-for-average" class="badge badge-secondary px-4">84</span></h2>
     </header>
     <table class="table table-bordered table-striped table-hover">
       <thead class="thead-dark">
