--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Student Grade Table</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body class="container">
@@ -14,18 +14,20 @@
       <h1 class="col-8">Student Grade Table</h1>
       <h2 class="col-4 text-right">Average Grade<span class="px-2"></span><span id="badge-for-average" class="badge badge-secondary px-4">--</span></h2>
     </header>
-    <table class="table table-bordered table-striped table-hover">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Student Name</th>
-          <th scope="col"> Course</th>
-          <th scope="col"> Grade</th>
-        </tr>
-      </thead>
-      <tbody id = 'table'>
+    <div class="row">
+      <table class="table table-bordered table-striped table-hover col-8">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Student Name</th>
+            <th scope="col"> Course</th>
+            <th scope="col"> Grade</th>
+          </tr>
+        </thead>
+        <tbody id = 'table'>
 
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
