Finished building html skeleton for the form and applied bootstrap styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
 
         </tbody>
       </table>
+      <form action="" class="col-4">
+        <div class="form-row my-2">
+          <i class="col-1 fas fa-user py-2 mx-2 fa-lg"></i>
+          <input id="name-input" class="col" type="text" name="name" placeholder="Name">
+        </div>
+        <div class="form-row my-2">
+          <i class="col-1 far fa-list-alt py-2 mx-2 fa-lg"></i>
+          <input id="course-input" class="col" type="text" name="course" placeholder="Course">
+        </div>
+        <div class="form-row my-2">
+          <i class="col-1 fas fa-graduation-cap py-2 mx-2 fa-lg"></i>
+          <input id="grade-input" class="col" type="text" name="grade" placeholder="Grade">
+        </div>
+        <div class="form-row my-3">
+          <div class="col-6"></div>
+          <button type="submit" class="col-2 btn btn-secondary mx-1">Add</button>
+          <button type="reset" class="col-3 btn btn-secondary mx-1">Cancel</button>
+        </div>
+      </form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/page-header.js"></script>
