--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
     <script src="assets/components/grade-table.js"></script>
+    <script src="assets/components/grade-form.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
