Modified main.js to query the DOM for the grade form and instaniate a new gradeForm with the newly targeted element as an argument

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         </tbody>
       </table>
-      <form action="" class="col-4">
+      <form id="form" action="" class="col-4">
         <div class="form-row my-2">
           <i class="col-1 fas fa-user py-2 mx-2 fa-lg"></i>
           <input id="name-input" class="col" type="text" name="name" placeholder="Name">
