--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <thead class="thead-dark">
           <tr>
             <th scope="col">Student Name</th>
-            <th scope="col"> Course</th>
-            <th scope="col"> Grade</th>
+            <th scope="col">Course</th>
+            <th scope="col">Grade</th>
+            <th scope="col">Operations</th>
           </tr>
         </thead>
         <tbody id = 'table'>
@@ -42,11 +43,12 @@
         </div>
         <div class="form-row my-3">
           <div class="col-6"></div>
-          <button type="submit" class="col-2 btn btn-secondary mx-1">Add</button>
+          <button type="submit" class="col-2 btn btn-outline-success mx-1">Add</button>
           <button type="reset" class="col-3 btn btn-secondary mx-1">Cancel</button>
         </div>
       </form>
     </div>
+    <div class="d-none"><p>No Grades Recorded</p></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
