Modified the update method to conditionally show the noGradesElement/Modified the main.js to pass the noGradesElement to the GradeTable class while instantiating/ Modified app class start method to use the methods for deleteGrade on the onDeleteClick method

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </form>
     </div>
-    <div class="d-none"><p>No Grades Recorded</p></div>
+    <div id="message" class="d-none"><p>No Grades Recorded</p></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
