--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body class="container">
     <header class="row py-3">
-      <h1 class="col-8">Student Grade Table</h1>
-      <h2 class="col-4 text-right">Average Grade<span class="px-2"></span><span id="badge-for-average" class="badge badge-secondary px-4">--</span></h2>
+      <h1 class="col-md-8 text-center text-sm-center text-md-center text-lg-left">Student Grade Table</h1>
+      <h2 class="col-md-4 text-center text-sm-center text-md-center text-lg-right">Average Grade<span class="px-2"></span><span id="badge-for-average" class="badge badge-secondary px-4">--</span></h2>
     </header>
     <div class="row">
-      <table class="table table-bordered table-striped table-hover col-8">
+      <table class="table table-bordered table-striped table-hover col-md-12 col-lg-8">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Student Name</th>
@@ -29,7 +29,7 @@
 
         </tbody>
       </table>
-      <form id="form" action="" class="col-4">
+      <form id="form" action="" class="col-md-12 col-lg-4">
         <div class="form-row my-2">
           <i class="col-1 fas fa-user py-2 mx-2 fa-lg"></i>
           <input id="name-input" class="col" type="text" name="name" placeholder="Name">
