--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <th scope="col">Operations</th>
           </tr>
         </thead>
-
         <tbody id = 'table'>
 
         </tbody>
@@ -42,10 +41,9 @@
           <i class="col-1 fas fa-graduation-cap py-2 mx-2 fa-lg"></i>
           <input id="grade-input" class="col" type="text" name="grade" placeholder="Grade">
         </div>
-        <div class="form-row my-3">
-          <div class="col-6"></div>
-          <button type="submit" class="col-2 btn btn-outline-success mx-1">Add</button>
-          <button type="reset" class="col-3 btn btn-secondary mx-1">Cancel</button>
+        <div class="form-row my-3 justify-content-end">
+          <button type="submit" class="col-2 col-sm-2 btn btn-outline-success mx-1">Add</button>
+          <button type="reset" class="col-3 col-sm-3 btn btn-secondary mx-1">Cancel</button>
         </div>
       </form>
     </div>
