--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
       <h2 class="col-md-4 text-center text-sm-center text-md-center text-lg-right">Average Grade<span class="px-2"></span><span id="badge-for-average" class="badge badge-secondary px-4">--</span></h2>
     </header>
     <div class="row">
-      <table class="table table-bordered table-striped table-hover col-md-12 col-lg-8">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">Student Name</th>
-            <th scope="col">Course</th>
-            <th scope="col">Grade</th>
-            <th scope="col">Operations</th>
-          </tr>
-        </thead>
-        <tbody id = 'table'>
+      <div class="col-md-12 col-lg-8">
+        <table class="table table-bordered table-striped table-hover">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Student Name</th>
+              <th scope="col">Course</th>
+              <th scope="col">Grade</th>
+              <th scope="col">Operations</th>
+            </tr>
+          </thead>
+          <tbody id = 'table'>
 
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+        <div id="message" class="d-none">
+          <p>No Grades Recorded</p>
+        </div>
+      </div>
       <form id="form" action="" class="col-md-12 col-lg-4">
         <div class="form-row my-2">
           <i class="col-1 fas fa-user py-2 mx-2 fa-lg"></i>
@@ -47,7 +52,7 @@
         </div>
       </form>
     </div>
-    <div id="message" class="d-none"><p>No Grades Recorded</p></div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="assets/components/page-header.js"></script>
     <script src="assets/components/app.js"></script>
